@@ -1,5 +1,7 @@
 2008-04-17  Adam Schreiber  <sadam@clemson.edu>
 
+    * libseahorse/seahorse-secure-memory.c: Test for secure memory before
+    remapping memory functions.  Patch from Coleman Kane. Fixes bug #527193
     * plugins/nautilus/seahorse-pgp-preferences.c: Remove unused variable.
     * libseahorse/seahorse-hkp-source.c: Fix importing keys from hkp keyservers.
     Patch from Mackenzie Morgan.  Fixes bug #528150
